force-app/main/default/objects/Product2/fields/BW_Price_25__c.field-meta.xml
<CustomField>
    <fullName>BW_Price_25__c</fullName>
    <description>Bulk unit price for B&amp;W Print + Digital format (25+ qty).</description>
    <label>B&amp;W Price 25+</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>