force-app/main/default/objects/Product2/fields/BW_Price__c.field-meta.xml
<CustomField>
    <fullName>BW_Price__c</fullName>
    <description>Standard unit price for B&amp;W Print + Digital format (10-24 qty).</description>
    <label>B&amp;W Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>