force-app/main/default/objects/Product2/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>English</fullName>
            </value>
            <value>
                <fullName>Math</fullName>
            </value>
            <value>
                <fullName>Reading</fullName>
            </value>
            <value>
                <fullName>Social Studies</fullName>
            </value>
            <value>
                <fullName>Science</fullName>
            </value>
            <value>
                <fullName>Writing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>