force-app/main/default/objects/Product2/fields/Color_Price_25__c.field-meta.xml
<CustomField>
    <fullName>Color_Price_25__c</fullName>
    <description>Bulk unit price for Color Print + Digital format (25+ qty).</description>
    <label>Color Price 25+</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>