force-app/main/default/objects/Product2/fields/Color_Price__c.field-meta.xml
<CustomField>
    <fullName>Color_Price__c</fullName>
    <label>Color Price</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
    <description>Standard unit price for Color Print + Digital format (10-24 qty).</description>
</CustomField>