force-app/main/default/objects/Product2/fields/Coursewave_Code__c.field-meta.xml
<CustomField>
    <fullName>Coursewave_Code__c</fullName>
    <label>Coursewave Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>