force-app/main/default/objects/Product2/fields/Digital_Price_25__c.field-meta.xml
<CustomField>
    <fullName>Digital_Price_25__c</fullName>
    <description>Bulk unit price for Digital Only format (25+ qty).</description>
    <label>Digital Price 25+</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>