force-app/main/default/objects/Product2/fields/Digital_Price__c.field-meta.xml
<CustomField>
    <fullName>Digital_Price__c</fullName>
    <description
  >Standard unit price for Digital Only format (10-24 qty).</description>
    <label>Digital Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>