force-app/main/default/objects/Product2/fields/Grade_Level__c.field-meta.xml
<CustomField>
    <fullName>Grade_Level__c</fullName>
    <label>Grade Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Kindergarten</fullName>
            </value>
            <value>
                <fullName>Grade 1</fullName>
            </value>
            <value>
                <fullName>Grade 2</fullName>
            </value>
            <value>
                <fullName>Grade 3</fullName>
            </value>
            <value>
                <fullName>Grade 4</fullName>
            </value>
            <value>
                <fullName>Grade 5</fullName>
            </value>
            <value>
                <fullName>Grade 6</fullName>
            </value>
            <value>
                <fullName>Grade 7</fullName>
            </value>
            <value>
                <fullName>Grade 8</fullName>
            </value>
            <value>
                <fullName>Grade 9</fullName>
            </value>
            <value>
                <fullName>Grade 10</fullName>
            </value>
            <value>
                <fullName>Grade 11</fullName>
            </value>
            <value>
                <fullName>Grade 12</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>