force-app/main/default/objects/Product2/fields/Is_Digital_Product__c.field-meta.xml
<CustomField>
    <fullName>Is_Digital_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Digital Product</label>
    <type>Checkbox</type>
    <description>When true, this product is exempt from shipping charges. Used by ABCShippingCalculator.</description>
</CustomField>