force-app/main/default/objects/Product2/fields/Pricing_Group__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Group__c</fullName>
    <label>Pricing Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BW K-8</fullName>
            </value>
            <value>
                <fullName>BW 9-12</fullName>
            </value>
            <value>
                <fullName>COLOR K-8</fullName>
            </value>
            <value>
                <fullName>COLOR 9-12</fullName>
            </value>
            <value>
                <fullName>COURSEWAVE K-8</fullName>
            </value>
            <value>
                <fullName>COURSEWAVE 9-12</fullName>
            </value>
            <value>
                <fullName>PARENTBD</fullName>
            </value>
            <value>
                <fullName>PARENTBO</fullName>
            </value>
            <value>
                <fullName>TEACHERGUIDE</fullName>
            </value>
            <value>
                <fullName>KYBW K8</fullName>
            </value>
            <value>
                <fullName>KYBW 9-12</fullName>
            </value>
            <value>
                <fullName>KYCOLOR K-8</fullName>
            </value>
            <value>
                <fullName>KYCOLOR 9-12</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>