force-app/main/default/objects/Product2/fields/Series__c.field-meta.xml
<CustomField>
    <fullName>Series__c</fullName>
    <label>Series</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ACAP Success</fullName>
            </value>
            <value>
                <fullName>ACT</fullName>
            </value>
            <value>
                <fullName>ACT Achievement</fullName>
            </value>
            <value>
                <fullName>Adult Basic Curriculum</fullName>
            </value>
            <value>
                <fullName>Basics Made Easy</fullName>
            </value>
            <value>
                <fullName>CCGPS</fullName>
            </value>
            <value>
                <fullName>CCRA Success</fullName>
            </value>
            <value>
                <fullName>Common Core</fullName>
            </value>
            <value>
                <fullName>EXPLORE</fullName>
            </value>
            <value>
                <fullName>Foundations</fullName>
            </value>
            <value>
                <fullName>GSE Success</fullName>
            </value>
            <value>
                <fullName>Gearing Up</fullName>
            </value>
            <value>
                <fullName>ILeap/Leap</fullName>
            </value>
            <value>
                <fullName>K-PREP</fullName>
            </value>
            <value>
                <fullName>K-PREP/QualityCore</fullName>
            </value>
            <value>
                <fullName>KSA Success</fullName>
            </value>
            <value>
                <fullName>LEAP 2025</fullName>
            </value>
            <value>
                <fullName>LEAP Success</fullName>
            </value>
            <value>
                <fullName>Milestones</fullName>
            </value>
            <value>
                <fullName>OCCT/EOI</fullName>
            </value>
            <value>
                <fullName>OSTP Success</fullName>
            </value>
            <value>
                <fullName>PARCC</fullName>
            </value>
            <value>
                <fullName>PLAN</fullName>
            </value>
            <value>
                <fullName>SCPASS</fullName>
            </value>
            <value>
                <fullName>Smarter Balanced</fullName>
            </value>
            <value>
                <fullName>TAS Success</fullName>
            </value>
            <value>
                <fullName>TCAP Success</fullName>
            </value>
            <value>
                <fullName>EOC</fullName>
            </value>
            <value>
                <fullName>MCA</fullName>
            </value>
            <value>
                <fullName>EOG</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>