force-app/main/default/objects/Product2/listViews/Bundled_Products_List_View.listView-meta.xml
<ListView>
    <fullName>Bundled_Products_List_View</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.PRODUCT_TYPE</columns>
    <filterScope>Everything</filterScope>
    <label>Bundled Products</label>
</ListView>